Thu Mar 23 19:21:39 2000  George Lebl <jirka@5z.com>

	* gnome-pixmap.c: Add gtk-arg

2000-03-17  Jaka Mocnik  <jaka.mocnik@kiss.uni-lj.si>

	* gnome-mdi.c: various small fixes.
	* gnome-pouch.c, gnome-roo.c: shuffled the way signals get
	emitted; removed default signal handler for GnomePouch::close-child.
	* Makefile.am: as mdi_demo source was committed, build it.

Wed, 15 Mar 2000 14:03:46 +0100 Paolo Molaro <lupus@linuxcare.com>

	* gnome-font-picker.c: avoid checking all the memory for '-'.
	  Is this code going to stay in gnome-libs? It needs a big cleanup.

2000-03-13  Elliot Lee  <sopwith@redhat.com>
	* gnome-stock.c: Fix gnome_stock_or_ordinary_button for the ordinary button case.
	* Makefile.am: Until mdi_demo.c is committed, remove usage thereof

2000-03-13  Jaka Mocnik  <jaka.mocnik@kiss.uni-lj.si>

	* gnome-pouch.[ch]: new files; a Window-in-Window style MDI container
	widget.
	* gnome-roo.[ch]: new files; a child window for Window-in-Window style
	MDI. The child window decorations are rather ugly, as I'm a pretty bad
	designer. Any improvements are very welcome.
	* gnome-mdi.h: new enum GNOME_MDI_WIW; describes WiW MDI mode.
	* gnome-mdi.[ch] (gnome_mdi_new): return a GnomeMDI * instead of
	GtkObject *.
	(gnome_mdi_get_view_menu_info): new function; return menu GnomeUIInfo
	of a view if the menu is set.
	(gnome_mdi_get_view_toolbar_info): new function; return toolbar
 	GnomeUIInfo of a view if the toolbar is set.
	(gnome_mdi_get_child_toolbar_info): new function; return child's
	toolbar GnomeUIInfo of a given GnomeApp.
	(*): implemented the WiW mode. I suppose it's still full of bugs
	that I've overlooked.
	* gnome-mdi-child.h (GnomeMDIChildConfigFunc): returns a const
	gchar *.
	(gnome_mdi_child_add_toolbar): moved to gnome-mdiP.h.
	* mdi_demo.c: a testing app for GnomeMDI.
	* Makefile.am: integrated the above.

Sat Mar 04 21:35:08 2000  George Lebl <jirka@5z.com>

	* gnome-pixmap-entry.c: fix destructor to call parent destructor
