@@ -1,3 +1,8 @@
+Tue Mar 28 20:41:46 2000  George Lebl <jirka@5z.com>
+
+	* gnome-number-entry.[ch]: add a _set_number method to complement
+	  the _get_number method.
+
 Thu Mar 23 19:21:39 2000  George Lebl <jirka@5z.com>
 
 	* gnome-pixmap.c: Add gtk-arg
